infrastructure/kubernetes/ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vrsky-ui
  labels:
    name: vrsky-ui
    environment: production
